--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -18,9 +18,9 @@ body, html, * {
 .navbar-btn-group {
   display: flex;
   align-items: center;
-  gap: 2.5em !important;
-  min-width: 420px;
-  max-width: 90vw;
+  gap: 15em !important;
+  min-width: 0 !important;
+  max-width: 100vw;
   height: 100%;
 }
 .navbar-tab-btn {
