--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -19,8 +19,9 @@ body, html, * {
   display: flex;
   align-items: center;
   gap: 8em !important;
-  min-width: 0 !important;
+  min-width: 1200px !important;
   max-width: 100vw;
+  width: 100%;
   height: 100%;
 }
 .navbar-tab-btn {
