--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -15,6 +15,7 @@ body, html, * {
   min-width: 0 !important;
   max-width: 100vw;
   height: 38px !important;
+  margin-bottom: 0.7em;
 }
 .navbar-btn-group {
   display: flex;
