--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -121,22 +121,22 @@ body, html, * {
     box-shadow: 0 0 8px 1px #ffe06633, 0 0 0 1px #ffe06622;
   }
   .navbar-tab-btn {
-    background: transparent !important;
-    border: 2px solid #ffe066 !important;
-    color: #ffe066 !important;
-    box-shadow: 0 0 8px 1px #ffe066, 0 0 0 1px #ffe06655, 0 2px 4px rgba(80,106,255,0.10);
-    text-shadow: 0 0 6px #ffe066, 0 0 1px #fff;
-    font-size: 0.88em !important;
-    padding: 0.13em 0.5em !important;
     min-width: 54px !important;
-    max-width: 80px;
+    max-width: 80px !important;
+    width: 70px !important;
     height: 22px !important;
+    font-size: 0.82em !important;
+    padding: 0.08em 0.3em !important;
+    border-width: 2px !important;
+    box-shadow: 0 0 6px 1px #00ffea;
+    text-shadow: 0 0 6px #00ffea;
+    margin: 0.2em 0.1em !important;
   }
   .navbar-username {
-    margin-left: 0.2em !important;
+    font-size: 0.82em !important;
+    max-width: 54px;
+    margin-left: 0.1em !important;
     margin-right: 0.05em !important;
-    font-size: 0.88em !important;
-    max-width: 70px;
   }
   .navbar-tab-btn:hover,
   .navbar-tab-btn:focus {
@@ -152,6 +152,18 @@ body, html, * {
     border-color: #fffbe6 !important;
     box-shadow: 0 0 16px 3px #ffe066, 0 0 0 1px #ffe066cc, 0 2px 4px rgba(80,106,255,0.10);
     text-shadow: 0 0 12px #ffe066, 0 0 1px #fff;
+  }
+  .navbar-btn-group .wallet-selector-btn {
+    min-width: 54px !important;
+    max-width: 80px !important;
+    width: 70px !important;
+    height: 22px !important;
+    font-size: 0.82em !important;
+    padding: 0.08em 0.3em !important;
+    border-width: 2px !important;
+    box-shadow: 0 0 6px 1px #00ffea;
+    text-shadow: 0 0 6px #00ffea;
+    margin: 0.2em 0.1em !important;
   }
 }
 
